# shopfloor-app

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  eslint.config.cjs
setup/_metapackage/: pyproject.toml
shopfloor_base/: README.rst  __manifest__.py
shopfloor_base/actions/: lock.py
shopfloor_base/controllers/: main.py
shopfloor_base/i18n/: id.po  shopfloor_base.pot
shopfloor_base/models/: shopfloor_app.py
shopfloor_base/security/: ir.model.access.csv
shopfloor_base/services/: menu.py  service.py  validator.py
shopfloor_base/tests/: common.py  common_http.py  test_shopfloor_app.py  test_shopfloor_scenario.py
shopfloor_base/views/: shopfloor_menu.xml  shopfloor_profile_views.xml
shopfloor_example/: README.rst  __manifest__.py
shopfloor_example/demo/: shopfloor_app_demo.xml
shopfloor_example/i18n/: fr_FR.po
shopfloor_example/templates/: assets.xml
shopfloor_example/tests/: test_partner_service.py  test_scan_anything.py
shopfloor_mobile_base/: README.rst  __manifest__.py
shopfloor_mobile_base/controllers/: main.py
shopfloor_mobile_base/readme/: CONTRIBUTORS.md
shopfloor_mobile_base_auth_api_key/: README.rst  __manifest__.py
shopfloor_mobile_base_auth_api_key/templates/: assets.xml
shopfloor_rest_log/: README.rst  __manifest__.py
shopfloor_workstation/: README.rst  __manifest__.py
shopfloor_workstation/i18n/: shopfloor_workstation.pot
shopfloor_workstation/readme/: CONFIGURE.md  DESCRIPTION.md
shopfloor_workstation/views/: shopfloor_workstation.xml
shopfloor_workstation_label_printer/: README.rst  __manifest__.py
(+20 files in other folders)
