[project]
name = "odoo-addons-oca-shopfloor-app"
version = "18.0.20250813.0"
dependencies = [
    "odoo-addon-shopfloor_base==18.0.*",
    "odoo-addon-shopfloor_example==18.0.*",
    "odoo-addon-shopfloor_mobile_base==18.0.*",
    "odoo-addon-shopfloor_mobile_base_auth_api_key==18.0.*",
    "odoo-addon-shopfloor_rest_log==18.0.*",
    "odoo-addon-shopfloor_workstation==18.0.*",
    "odoo-addon-shopfloor_workstation_label_printer==18.0.*",
    "odoo-addon-shopfloor_workstation_mobile==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
